@@ -23,6 +23,9 @@ Changes since version 1.1.0
 - src/IceUtil/CtrlCHandler.cpp now handles (ignores) EINTR returned by 
   sigwait.
 
+- added DB_PRIVATE flag to DBEnv->open() on Linux, to be able to use 
+  the Berkeley DB that ships with RedHat 9.
+
 Changes since version 1.0.1
 ---------------------------
 
